...
        style="@style/TanrabadTextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_card_building_list"/>

    <ImageButton
        android:id="@+id/edit_building"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/card_title"
        android:layout_toEndOf="@id/card_title"
        android:layout_toRightOf="@id/card_title"
        android:background="@color/transparent"
...
