...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textIsSelectable="false"/>

        <EditText
                android:id="@+id/address_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/touch_to_define_address"
                android:inputType="text"/>

        <LinearLayout
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="false"
                        tools:text="ประเภทศาสนสถาน"/>

                <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/place_subtype_selector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
            </LinearLayout>
        </LinearLayout>

...
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="500dp">

            <FrameLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <FrameLayout
                android:id="@+id/add_location_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_transparent_50">

                <Button
                    android:id="@+id/add_marker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/define_building_location" />
            </FrameLayout>
        </FrameLayout>
...
